5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1670_1397.log
== SUBMITION (2019-04-16 18:21:10) 
-- CODE:
var= int

-- EXECUTION TIME:
0.160851
-- TEST CASE 1:
---- input:
4554
---- correct output:
22770.0
---- user output:

-- TEST CASE 2:
---- input:
18215
---- correct output:
82860.0
---- user output:

-- TEST CASE 3:
---- input:
9000
---- correct output:
45000.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:43) 
-- CODE:
var= int
round(, 2)
    if 10000*5
	 x> 1000
	else (1000*5)+X*4

-- ERROR:
File "XXXX", line 2
    round(, 2)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:05) 
-- CODE:
var= int
print (x= )
round(, 2)
    if 10000*5
	 x> 1000
	else (1000*5)+X*4

-- ERROR:
File "XXXX", line 2
    print (x= )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:25) 
-- CODE:
var= int
print( quantida de hectares)
round(, 2)
    if 10000*5
	 x> 1000
	else (1000*5)+X*4

-- ERROR:
File "XXXX", line 2
    print( quantida de hectares)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
